Rearranged character select page to fix alignment issues. Added selection overlay effect and fixed banner display.

--- a/styles.scss
+++ b/styles.scss
@@ -160,9 +160,44 @@ input#menu-input {
 }
 
 #character-picker {
-  img {
-    width:80%;
+  height:100%;
+  div {
+    max-width:100%;
     height:auto;
-    margin:auto;
+    flex-basis:50%;
+    position:relative;
+    img {
+      width:50%;
+      height:auto;
+      margin:auto;
+    }
   }
+}
+
+.character-active {
+  //background-color:red;
+  &:before{
+    position:absolute;
+    background-image:url(./static/select.png);
+    background-size:contain;
+    background-repeat:no-repeat;
+    background-origin:content-box;
+    background-position:center center;
+    z-index:3;
+    height:100%;
+    width:100%;
+    content:"";
+  }
+}
+
+#character-flavor {
+  width:90%;
+  font-family:Quicksand, sans-serif;
+  font-size:1.5rem;
+}
+
+#character-banner {
+  background-image:url(./static/chooseachar.png);
+  background-size:contain;
+  background-repeat:no-repeat;
 }
